Refactor NBT access